# viral-ops

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  OPENAI.md  README.md  SECURITY.md  SETUP.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.github/workflows/: ci.yml
templates/: .env.example  creators.example.yml  profile.example.yml
tests/: test_analyzer.py  test_config.py  test_gallery.py  test_main.py  test_scanner.py
viral_ops/: __main__.py  analyzer.py  config.py  gallery.py  scanner.py
