[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viral-ops"
version = "0.1.0"
description = "Viral content intelligence — scan YouTube, score virality, generate AI copy angles"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["youtube", "viral", "content", "ai", "marketing", "creator"]

dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "google-generativeai>=0.7.0",
    "anthropic>=0.30.0",
    "openai>=1.35.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "typer>=0.12.3",
]

[project.scripts]
viral-ops = "viral_ops.__main__:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["viral_ops*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
